--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,3 +2,5 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
+libs.JCalander.classpath=\
+    
